--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,15 @@
   become: true
 
   tasks:
-  - name: Install htop
+  - name: Install packages
     apt:
-      name: htop
+      name: 
+       - htop
+       - zsh
+       - apt-transport-https
+       - ca-certificates
+       - curl
+       - gnupg-agent
+       - software-properties-common
+       - cockpit
 
