--- a/local.yml
+++ b/local.yml
@@ -1,23 +1,4 @@
-- hosts: localhost
-  roles:
-    - role: gantsign.antigen
-      users:
-        - username: inman
-          antigen_libraries:
-            - name: oh-my-zsh
-          antigen_theme:
-            name: robbyrussell
-          antigen_bundles:
-            # Bundles from the default repo (robbyrussell's oh-my-zsh).
-            - name: git
-            - name: pip
-            - name: command-not-found
-            # Syntax highlighting bundle.
-            - name: zsh-syntax-highlighting # `name` is required (any valid file name will do so long as it's unique for the bundles)
-              url: zsh-users/zsh-syntax-highlighting
-            - name: zsh-autosuggestions # `name` is required (any valid file name will do so long as it's unique for the bundles)
-              url: zsh-users/zsh-autosuggestions
-    
+- hosts: localhost    
   connection: local
   become: true
 
@@ -35,4 +16,16 @@
        - cockpit
        - wget
        - chsh
+
+  - name: Just ensuring the repo checkout exists
+    git:
+    repo: 'https://github.com/zsh-users/zsh-autosuggestions'
+    dest: ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+    update: no
+
+  - name: Just ensuring the repo checkout exists
+    git:
+    repo: 'https://github.com/zsh-users/zsh-syntax-highlighting'
+    dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+    update: no
 
