--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -11,5 +11,13 @@
        - cockpit
        - wget
        - neofetch
+       - qemu-kvm
+       - libvirt-clients
+       - libvirt-daemon-system
+       - bridge-utils
+       - virtinst
+       - libvirt-daemon
+       - virt-manager
+
 
 
