--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -11,3 +11,16 @@
     group: root
     mode: 0440
 
+- name: create ansible user
+  user:
+    name: inman
+    system: yes
+
+- name: copy sudoers_inman
+  copy:
+    src: files/sudoers_inman
+    dest: /etc/sudoers.d/inman
+    owner: root
+    group: root
+    mode: 0440
+
