--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,8 @@
   become: true
 
   pre_tasks:
-    - name: update repos
+    - name: update repos (debian)
+      when: ansible_distribution in ["Debian", "Ubuntu"]
       apt:
         update_cache: yes
       changed_when: False
@@ -12,3 +13,4 @@
     - include: tasks/packages.yml
     - include: tasks/users.yml
     - include: tasks/cron.yml
+
