--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,11 @@
   become: true
 
   pre_tasks:
+    # - name: Add specified repository into sources list
+    #   when: ansible_distribution == "Debian"
+    #   apt_repository:
+    #     repo: deb http://deb.debian.org/debian buster-backports main
+    #     state: present
     - name: update repos (debian)
       when: ansible_distribution in ["Debian", "Ubuntu"]
       apt:
